--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -10,6 +10,7 @@
     padding: 32px 16px;
     box-sizing: border-box;
     transition: transform 0.3s ease-out;
+    
 }
 
 @media (min-width: 500px) {
@@ -23,10 +24,11 @@
 }
 
 .Close {
-    transform: translateX(-100%);
+    transform: translateX(-200%);
 }
 
 .Logo {
+    display: inline-block;
     height: 11%;
     margin-bottom: 32px;
 }
